--- a/vocea-universitatii/appsettings.Development.json
+++ b/vocea-universitatii/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "VoceaDatabase": "Host=localhost; Database=vocea-universitatii-dev; Username=rares"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
