--- a/vocea-universitatii/vocea-universitatii.csproj
+++ b/vocea-universitatii/vocea-universitatii.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>vocea_universitatii</RootNamespace>
-    </PropertyGroup>
+      <UserSecretsId>8ed9f969-14e9-4e0c-99ed-f2d9353fd28a</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
