Separated Development and Staging Environments

--- a/vocea-universitatii/appsettings.Production.json
+++ b/vocea-universitatii/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "VoceaDatabase": "Host=localhost; Database=vocea-universitatii-dev; Username=rares"
+    "VoceaDatabase": ""
   },
   "Logging": {
     "LogLevel": {
