--- a/vocea-universitatii/appsettings.Staging.json
+++ b/vocea-universitatii/appsettings.Staging.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "VoceaDatabase": "VoceaUniversitatii"
+    "VoceaDatabase": "voceaUniversitatiiStaging"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
