--- a/vocea-universitatii/Dockerfile
+++ b/vocea-universitatii/Dockerfile
@@ -12,4 +12,4 @@ RUN dotnet publish -c RELEASE -o out
 FROM mcr.microsoft.com/dotnet/sdk:7.0 as final-env 
 WORKDIR /app
 COPY --from=build-env /app/out . 
-ENTRYPOINT ["dotnet", "VoceaUniversitatii.ddl"]
+ENTRYPOINT ["dotnet", "VoceaUniversitatii.dll"]
