Removed ElephantSQL Staging Environment due to closure of the service. Renamed every instance of kebap-case to Pascal Case. Set Development Database to a local postgres dev database.

--- a/VoceaUniversitatii/appsettings.Development.json
+++ b/VoceaUniversitatii/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "VoceaDatabase": "VoceaUniversitatii"
+    "VoceaUniversitatiiDevDatabasse": "Server=localhost;Database=vocea_universitatii_dev;User Id=rarescristea;"
   },
   "Logging": {
     "LogLevel": {
