--- a/LegacyDatabaseMigration/LegacyDatabaseMigration.csproj
+++ b/LegacyDatabaseMigration/LegacyDatabaseMigration.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\vocea-universitatii\VoceaUniversitatii.csproj" />
+      <ProjectReference Include="..\VoceaUniversitatii\VoceaUniversitatii.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
