--- a/VoceaUniversitatiiMigrations/VoceaUniversitatiiMigrations.csproj
+++ b/VoceaUniversitatiiMigrations/VoceaUniversitatiiMigrations.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <BaseOutputPath>..\vocea-universitatii\bin\</BaseOutputPath>
+        <BaseOutputPath>..\VoceaUniversitatii\bin\</BaseOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
