--- a/LegacyDatabaseMigration/LegacyDatabaseMigration.csproj
+++ b/LegacyDatabaseMigration/LegacyDatabaseMigration.csproj
@@ -5,14 +5,21 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        
+        
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\VoceaUniversitatii\VoceaUniversitatii.csproj" />
+      <ProjectReference Include="..\VoceaUniversitatiiDataModels\VoceaUniversitatiiDataModels.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
